<resources>
    <string name="app_name">HW №3 My first views =)</string>
    <string name="pol_attractions">Attractions</string>
    <string name="pol_dining">Dining</string>
    <string name="pol_education">Education</string>
    <string name="pol_family">Family</string>
    <string name="pol_health">Health</string>
    <string name="pol_office">Office</string>
    <string name="pol_promotions">Promotions</string>
    <string name="pol_radio">Radio</string>
    <string name="pol_recipes">Recipes</string>
    <string name="pol_sports">Sports</string>
    <string name="photo">PHOTO</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inventory">Inventory</string>
    <string name="weight">Weight</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="just_sign_in">* Just sign in</string>
    <string name="android">Android</string>
    <string name="posts">posts</string>
    <string name="numberOfPosts">125</string>
    <string name="followers">Followers</string>
    <string name="numberOfFollowers">20K</string>
    <string name="following">Following</string>
    <string name="numberOfFollowing">22</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="directions">Directions</string>
    <string name="call">call</string>
    <string name="save">save</string>
    <string name="website">website</string>
    <string name="profileImage">profileImage</string>
    <string name="horizontalLine">horizontalLine</string>
    <string name="anyImage">anyImage</string>
</resources>