<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11">

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView1"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_folder_24" />

        <TextView
            android:id="@+id/textView1"
            style="@style/PollTextStyle"
            android:text="@string/pol_attractions" />
    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView2"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_local_dining_24" />

        <TextView
            android:id="@+id/textView2"
            style="@style/PollTextStyle"
            android:text="@string/pol_dining" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView3"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_school_24" />

        <TextView
            android:id="@+id/textView3"
            style="@style/PollTextStyle"
            android:text="@string/pol_education" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView4"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_people_24" />

        <TextView
            android:id="@+id/textView4"
            style="@style/PollTextStyle"
            android:text="@string/pol_family" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView5"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_favorite_24" />

        <TextView
            android:id="@+id/textView5"
            style="@style/PollTextStyle"
            android:text="@string/pol_health" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView6"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_business_24" />

        <TextView
            android:id="@+id/textView6"
            style="@style/PollTextStyle"
            android:text="@string/pol_office" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView7"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

        <TextView
            android:id="@+id/textView7"
            style="@style/PollTextStyle"
            android:text="@string/pol_promotions" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView8"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_radio_24" />

        <TextView
            android:id="@+id/textView8"
            style="@style/PollTextStyle"
            android:text="@string/pol_radio" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView9"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_book_24" />

        <TextView
            android:id="@+id/textView9"
            style="@style/PollTextStyle"
            android:text="@string/pol_recipes" />

    </LinearLayout>

    <LinearLayout style="@style/PollLinearStyle">

        <ImageView
            android:id="@+id/imageView10"
            style="@style/PollImageStyle"
            app:srcCompat="@drawable/ic_baseline_directions_bike_24" />

        <TextView
            android:id="@+id/textView10"
            style="@style/PollTextStyle"
            android:text="@string/pol_sports" />

    </LinearLayout>
</LinearLayout>
