<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <include layout="@layout/activity_frame_in_photo" />

    <EditText
        style="@style/PhotoLinearEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            style="@style/PhotoLinearDoubleEditTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/price"
            android:inputType="numberDecimal" />

        <EditText
            style="@style/PhotoLinearDoubleEditTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_baseline_location_on_24"
            android:hint="@string/location"
            android:inputType="text" />

    </LinearLayout>

    <EditText
        style="@style/PhotoLinearEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:autofillHints=""
        android:hint="@string/description"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            style="@style/PhotoLinearDoubleEditTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/inventory"
            android:inputType="text" />

        <TextView
            style="@style/PhotoLinearDoubleEditTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <EditText
            style="@style/PhotoLinearDoubleEditTextStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/weight"
            android:inputType="numberDecimal" />
    </LinearLayout>

</LinearLayout>