<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/AndroidTextLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:text="@string/android"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        style="@style/AndroidInnerLinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey"
            android:contentDescription="@string/profileImage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/numberOfPosts" />

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/posts" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/numberOfFollowers" />

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/followers" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/numberOfFollowing" />

            <TextView
                style="@style/AndroidTextInInnerVerticalLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/following" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/AndroidTextLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:text="@string/username"
        android:textSize="20sp" />

    <TextView
        style="@style/AndroidTextLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="bottom"
        android:text="@string/address"
        android:textSize="18sp" />

    <TextView
        style="@style/AndroidTextLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="top"
        android:text="@string/description"
        android:textSize="18sp" />

    <LinearLayout
        style="@style/AndroidInnerLinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />
    </LinearLayout>

    <Space
        style="@style/AndroidSpaceLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        style="@style/AndroidInnerLinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35">

        <TextView
            style="@style/AndroidTextInInnerLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/directions"
            app:drawableTopCompat="@drawable/ic_baseline_directions_24" />

        <TextView
            style="@style/AndroidTextInInnerLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/call"
            app:drawableTopCompat="@drawable/ic_baseline_call_24" />

        <TextView
            style="@style/AndroidTextInInnerLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"
            app:drawableTopCompat="@drawable/ic_baseline_star_24" />

        <TextView
            style="@style/AndroidTextInInnerLinearLayoutHorizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/website"
            app:drawableTopCompat="@drawable/ic_baseline_link_24" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:contentDescription="@string/horizontalLine" />

    <Space
        style="@style/AndroidSpaceLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        style="@style/AndroidInnerLinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />

        <Space style="@style/AndroidSpaceForImageViewInLinearLayoutHorizontal"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            style="@style/AndroidInnerImageViewInLinearLayoutHorizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:contentDescription="@string/anyImage" />
    </LinearLayout>

    <Space
        style="@style/AndroidSpaceLinear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />
</LinearLayout>